# spinlock-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: build.sh
src/core/: core.hpp
src/core/log/: assert.hpp  log.hpp
src/core/pal/: pal.hpp
test/: test_main.cpp
